Fehler der Links bereinigt

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <li><a href="#stationen">Stationen</a></li>
             <li><a href="#teilnehmer">Teilnehmer</a></li>
             <li><a href="#dayone">start&nbsp;Tag&nbsp;1</a></li>
-            <li><a href="daytwo">Tag&nbsp;2</a></li>
-            <li><a href="daythree">Tag&nbsp;3</a></li>
-            <li><a href="dayfour">Tag&nbsp;4</a></li>
-            <li><a href="dayfive">Tag&nbsp;5</a></li>
-            <li><a href="daysix">finish&nbsp;Tag&nbsp;6</a></li>
+            <li><a href="#daytwo">Tag&nbsp;2</a></li>
+            <li><a href="#daythree">Tag&nbsp;3</a></li>
+            <li><a href="#dayfour">Tag&nbsp;4</a></li>
+            <li><a href="#dayfive">Tag&nbsp;5</a></li>
+            <li><a href="#daysix">finish&nbsp;Tag&nbsp;6</a></li>
         </ul>
     </nav>
     <section id="home">
@@ -29,12 +29,12 @@
         <article>
             <div class="header"><img src="assets/img/mtbAlpX_header.svg" alt="mtbAlpX Header"></div>
             <h2 class="headline"># die Stationen</h2>
-            <img class="imgL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Stationen">
-            <img class="imgC" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Stationen">
-            <img class="imgR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Stationen">
-            <img class="space imgL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Stationen">
-            <img class="imgC" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Stationen">
-            <img class="imgR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Stationen">
+            <img class="imgL" src="assets/img/hg/IMG_4981.jpg" alt="Stationen">
+            <img class="imgC" src="assets/img/hg/IMG_4981.jpg" alt="Stationen">
+            <img class="imgR" src="assets/img/hg/IMG_4981.jpg" alt="Stationen">
+            <img class="space imgL" src="assets/img/hg/IMG_4981.jpg" alt="Stationen">
+            <img class="imgC" src="assets/img/hg/IMG_4981.jpg" alt="Stationen">
+            <img class="imgR" src="assets/img/hg/IMG_4981.jpg" alt="Stationen">
             <p class="space pp">Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, vero blanditiis nisi alias nulla deleniti reprehenderit eos accusantium mollitia vitae.<br>Odit error sit explicabo asperiores, quis voluptas ad. Suscipit, corporis.</p>
         </article>
     </section>
@@ -42,69 +42,70 @@
         <article>
         <div class="header"><img src="assets/img/mtbAlpX_header.svg" alt="mtbAlpX Header"></div>
         <h2 class="headline"># die Teilnehmer</h2>
-        <img class="img-L" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="img-R" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="space img-L" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="img-R" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-L" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-R" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="space img-L" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-R" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
         </article>
         </section>
     <section id="dayone">
         <article>
             <div class="header"><img src="assets/img/mtbAlpX_header.svg" alt="mtbAlpX Header"></div>
         <h2 class="headline whiteSh"># START Tag 1</h2>
-        <img class="img-tagL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="img-tagR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="space img-tagL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="img-tagR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-tagL" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-tagR" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="space img-tagL" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-tagR" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
         </article>        
     </section>
     <section id="daytwo">
         <article>
             <div class="header"><img src="assets/img/mtbAlpX_header.svg" alt="mtbAlpX Header"></div>
         <h2 class="headline whiteSh"># Tag 2</h2>
-        <img class="img-tagL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="img-tagR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="space img-tagL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="img-tagR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-tagL" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-tagR" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="space img-tagL" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-tagR" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
         </article>        
     </section>
     <section id="daythree">
         <article>
             <div class="header"><img src="assets/img/mtbAlpX_header.svg" alt="mtbAlpX Header"></div>
         <h2 class="headline whiteSh"># Tag 3</h2>
-        <img class="img-tagL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="img-tagR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="space img-tagL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="img-tagR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-tagL" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-tagR" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="space img-tagL" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-tagR" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
         </article>
+    </section>
         <section id="dayfour">
             <article>
                 <div class="header"><img src="assets/img/mtbAlpX_header.svg" alt="mtbAlpX Header"></div>
             <h2 class="headline whiteSh"># Tag 4</h2>
-            <img class="img-tagL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-            <img class="img-tagR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-            <img class="space img-tagL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-            <img class="img-tagR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
+            <img class="img-tagL" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+            <img class="img-tagR" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+            <img class="space img-tagL" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+            <img class="img-tagR" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
             </article>    
     </section>
     <section id="dayfive">
         <article>
             <div class="header"><img src="assets/img/mtbAlpX_header.svg" alt="mtbAlpX Header"></div>
-        <h2 class="headline whiteSh"># Tag 4</h2>
-        <img class="img-tagL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="img-tagR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="space img-tagL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-        <img class="img-tagR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
+        <h2 class="headline whiteSh"># Tag 5</h2>
+        <img class="img-tagL" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-tagR" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="space img-tagL" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+        <img class="img-tagR" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
         </article>    
 </section>
 <section id="daysix">
     <article>
         <div class="header"><img src="assets/img/mtbAlpX_header.svg" alt="mtbAlpX Header"></div>
-    <h2 class="headline whiteSh"># Tag 4</h2>
-    <img class="img-tagL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-    <img class="img-tagR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-    <img class="space img-tagL" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
-    <img class="img-tagR" src="assets/img/Latsch - Trentino-Südtirol, 12. Juni 2017/IMG_4981.jpg" alt="Teilnehmer">
+    <h2 class="headline whiteSh"># finish Tag 6</h2>
+    <img class="img-tagL" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+    <img class="img-tagR" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+    <img class="space img-tagL" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
+    <img class="img-tagR" src="assets/img/hg/IMG_4981.jpg" alt="Teilnehmer">
     </article>    
 </section>
 </body>
