Frage in style.css Zeile 67

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>MTB Alpencross 2017 mit Jens, Werner, Maik und Dirk</title>
 </head>
 <body>
+    <section id="home">
     <nav id="navigation">
         <ul>
             <li><a href="#stationen">Stationen</a></li>
@@ -19,10 +20,9 @@
             <li><a href="#daysix">finish&nbsp;Tag&nbsp;6</a></li>
         </ul>
     </nav>
-    <section id="home">
         <article>
             <h1>mtbAlpX<br><span>2017</span></h1>
-            <div class="button"><p><a href="#stationen">START</a></p></div>
+            <a href="#stationen">START</a></article>
         </article>
     </section>
     <section id="stationen">
